--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project to show some brownies in a showcase",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,10 @@
     "babel-core": "~6.13.2",
     "babel-preset-react": "~6.11.1",
     "babel-preset-es2015": "~6.13.2",
-    "bootstrap": "~3.3.7"
+    "bootstrap": "~3.3.7",
+    "babel": "~6.5.2",
+    "webpack": "~1.13.3",
+    "webpack-dev-server": "~1.16.2"
   },
   "devDependencies": {
     "babel-loader": "~6.2.7",
